--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,40 @@
-.flag {
-    width: 20px;
-    display: inline-block;
+@import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Roboto+Condensed:wght@300&display=swap');
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+h1 {
+    font-size: 46px;
+    font-family: 'Gochi Hand', cursive;
+}
+
+#country-list {
+    list-style-type: none;
+    column-count: 3;
+    max-width: 1000px;
+    border-radius: 4px;
+    border: 1px solid lightgray;
+    background-color: #FAFAFA;
+    padding: 30px;
 }
 
 .world-map {
     width: 1000px;
+}
+
+.flag {
+    width: 20px;
+    margin: 0 10px 0 0;
+    display: inline-block;
+}
+
+.population {
+    margin: 0 0 12px 0;
+    font-size: 10px;
 }
 
 .blue {
